infra/k8s/overlays/prod/services/billing-service/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: billing-service-policy
  namespace: services
spec:
  podSelector:
    matchLabels:
      app: billing-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              env: prod
          podSelector:
            matchLabels:
              app: api-gateway
      ports:
        - protocol: TCP
          port: 4003
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - podSelector:
            matchLabels:
              app: auth-service
          namespaceSelector:
            matchLabels:
              name: platform-core
      ports:
        - protocol: TCP
          port: 4001
